--- a/wrangler.toml
+++ b/wrangler.toml
@@ -3,6 +3,6 @@ main = "src/worker.ts"
 compatibility_date = "2024-04-30"
 
 [[kv_namespaces]]
-binding = "KV"
+binding = "CONFIG"  # <--- ⚠️ именно CONFIG, не KV
 id = "a7ef054cee4b435f996060e458f7beef"
 preview_id = ""
