--- a/wrangler.toml
+++ b/wrangler.toml
@@ -2,10 +2,15 @@ name = "mini-tds"
 main = "src/worker.ts"
 compatibility_date = "2024-11-01"
 
+account_id = "REPLACE_WITH_ACCOUNT_ID"
+zone_id = "REPLACE_WITH_ZONE_ID"
+workers_dev = false
+
 routes = [
   { pattern = "bookieranks.ru/*", zone_name = "bookieranks.ru" }
 ]
 
 kv_namespaces = [
-  { binding = "KV", id = "a7ef054cee4b435f996060e458f7beef" }
+  # binding должен совпадать с именем в интерфейсе Env: CONFIG
+  { binding = "CONFIG", id = "a7ef054cee4b435f996060e458f7beef" }
 ]
